@@ -1,3 +1,8 @@
+2007-02-25  Peter Spjuth  <peter.spjuth@space.se>
+
+	* generic/tkUtil.c: Fixed grid anchor center problem in labelframes.
+	* tests/grid.test:  [Bug 1545765]
+
 2007-02-23  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* library/ttk/notebook.tcl (ttk::notebook::enableTraversal): OS X
